# ansible-dgx-collection

./: .dockerignore  .gitignore  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements.yml
.github/workflows/: add-to-project.yml  lint.yml  release-tag.yml  release.yml  unit-tests.yml
cli/zdgx/: __main__.py  app.py  runner.py
docs/: openai-client.example.py  prometheus-scrape.example.yml
inventory/: hosts.yml  vault.example.yml
inventory/group_vars/all/: main.yml
playbooks/: ai_serving.yml  backup.yml  backup_restore.yml  base.yml  bootstrap.yml  k3s.yml  monitoring.yml  nvidia_verify.yml  remote_desktop.yml  rollback.yml  site.yml  snapshot.yml  tailscale.yml
roles/backup/templates/: borg-backup.service.j2  borg-backup.sh.j2  borg-backup.timer.j2  borg-excludes.j2
roles/docker/: README.md
roles/docker/defaults/: main.yml
roles/docker/meta/: main.yml
roles/docker/tasks/: main.yml
roles/docker/templates/: daemon.json.j2
roles/k3s_gpu/: README.md
roles/k3s_gpu/defaults/: main.yml
roles/k3s_gpu/meta/: main.yml
roles/k3s_gpu/tasks/: main.yml
roles/monitoring/: README.md
roles/monitoring/defaults/: main.yml
roles/monitoring/handlers/: main.yml
roles/monitoring/meta/: main.yml
roles/monitoring/tasks/: main.yml
roles/monitoring/templates/: dcgm-exporter.service.j2  (+1 more)
roles/nvidia_verify/: README.md
roles/sunshine/: README.md
roles/tailscale/: README.md
roles/virtual_display/: README.md
roles/vllm/: README.md
scripts/: mirror_push.py
(+22 files in other folders)
