[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zdgx"
version = "0.1.0"
description = "Operator CLI for the zelos.dgx Ansible collection"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "kmechlin" }]
dependencies = ["typer>=0.12"]

[project.scripts]
zdgx = "zdgx.app:app"

[tool.setuptools.packages.find]
where = ["cli"]
